# untexify

./: README.html  README.org  dataset.py  default.nix  flake.nix  flakes-todo.org  garbage.py  kaggle.py  package-lock.json  package.json  pyproject.toml  quickstart.py  rollup.config.js  script.js  shell.nix  testing.py  training.py  transform.py  untexify.py  weirdmethod.md
frontend/: mozilla_drawingapp.js
frontend/untexifyweb/: Dockerfile  db.sqlite3  environment.yml  fly.toml  manage.py  requirements.txt
frontend/untexifyweb/app/: Procfile  urls.py  views.py
frontend/untexifyweb/app/static/testapp/: script.js
frontend/untexifyweb/app/static/testapp/webmodel/: keras_metadata.pb
frontend/untexifyweb/app/templates/testapp/: home.html  home.tex
frontend/untexifyweb/polls/: urls.py  views.py
frontend/untexifyweb/staticfiles/app/webmodel/: fingerprint.pb
frontend/untexifyweb/staticfiles/testapp/: pixijs.js  script.js  thing.html
frontend/untexifyweb/staticfiles/testapp/webmodel/: fingerprint.pb  keras_metadata.pb  saved_model.pb
frontend/untexifyweb/staticfiles/testapp/webmodel/variables/: variables.index
frontend/untexifyweb/testapp/: Procfile  forms.py  rollup.config.js  urls.py  views.py
frontend/untexifyweb/testapp/static/testapp/: livepreview.js  script.js
frontend/untexifyweb/testapp/templates/testapp/: bootstrap.html
frontend/untexifyweb/untexifyweb/: asgi.py  settings.py  urls.py  wsgi.py
list/: pyvenv.cfg
model iterations/: model.tflite  model2.tflife
model iterations/webmodel/: fingerprint.pb  saved_model.pb
tensorflow_tutorials/: timeforecast.py
(+2 files in other folders)
