[tool.poetry]
name = "untexifyweb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
# probably replace this with just 'tensorflow' on windows
tensorflow-macos = "2.12.*"
numpy = "*"
matplotlib="*"
pillow="*"
scipy="*"
opencv-python="*"
albumentations="*"
django = "^4.2.3"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
